--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="il counter di Fabio">
     <meta name="author" content="Fabio Prandi">
     <meta name="keywords" content="counter, js, fabio">
-    <meta property=”og:url” content="www.fabiocounter.com"/>
+    <meta property=”og:url” content="https://counterfabio.netlify.app/"/>
     <meta property=”og:type” content="counter"/>
     <meta property=”og:title” content="Il counter di Fabio con JS"/>
     <link rel="stylesheet" href="./css/style.css">
